# aipi540-marketmood

./: .gitignore  README.md  config.yaml  pyproject.toml  report.md  requirements.txt
app/: app.py
data/stockemo/: readme.md
notebooks/: 01_stockemo_eda.ipynb  02_modeling_dataset_eda.ipynb  03_baseline_analysis.ipynb  04_classical_model_analysis.ipynb  05_deep_model_analysis.ipynb
outputs/backtest/: backtest_equity_curves.csv  backtest_summary.csv  backtest_trades.csv
outputs/error_analysis/: example_summary.md  model_disagreements.csv  official_high_confidence_correct.csv  official_high_confidence_mistakes.csv  price_only_wins_over_text_price.csv  text_price_wins_over_price_only.csv
outputs/metrics/: classical_metrics.json  classical_validation_metrics.json  deep_fusion_metrics.json  deep_fusion_validation_metrics.json  experiment_summary.csv  report_model_comparison.csv  report_per_class_metrics.csv  report_subgroup_metrics.csv  ta_baseline_metrics.json
outputs/predictions/: classical_price_only_test_predictions.csv  classical_text_only_test_predictions.csv  classical_text_price_test_predictions.csv  deep_text_only_test_predictions.csv  deep_text_price_test_predictions.csv  ta_baseline_test_predictions.csv
scripts/: deploy_space.py  evaluate_models.py  generate_report_artifacts.py  prepare_data.py  run_backtest.py  train_models.py
tests/: test_backtesting.py  test_classical_model.py  test_deep_fusion.py  test_features.py  test_inference_service.py  test_labels.py  test_report_artifacts.py  test_scaffold.py  test_technical_baseline.py
(+22 files in other folders)
